fixed mission statemnt height on mobile and desktop and fixed the image-box img on promotions to be left and not right aligned

--- a/css/about.css
+++ b/css/about.css
@@ -194,7 +194,7 @@ html, body {
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
-    height: 600px;
+    height: 400px;
     position: relative;
 }
 
@@ -781,7 +781,7 @@ html, body {
     <--- -------------------------- -*/
 
     #mission {
-        height: 450px;
+        height: 400px;
         background-attachment: fixed;
     }
 
